@@ -109,6 +109,8 @@
             "values": [
                 "ganon_castle_open_dungeon",
                 "ganon_castle_open_medallion",
+                "ganon_castle_open_stones",
+                "ganon_castle_open_skulltulas",
                 "ganon_castle_open_default",
                 "ganon_castle_open_open"
             ]
