@@ -864,9 +864,11 @@ gerudo_fortress_open_open=Start with Gerudo Card
 ganon_castle_open_default=Vanilla requirements
 ganon_castle_open_dungeon=All dungeons
 ganon_castle_open_medallion=All medallions
+ganon_castle_open_stones=All spiritual stones
+ganon_castle_open_skulltulas=100 Skulltulas
 ganon_castle_open_open=Always open
 
-; SETTINGS - GANON
+; SETTINGS - LENS
 lens_required_default=Required everywhere
 lens_required_wasteland=Chest Minigame and Wastelands
 lens_required_never=Only Chest Minigame
